# pointCloud_ground_detection

./: CMakeLists.txt  README.md  install.sh
devel/: .catkin  .rosinstall  setup.sh
devel/include/rviz_cloud_annotation/: RectangleSelectionViewport.h  UndoRedoState.h
devel/lib/rviz_cloud_annotation/: rviz_cloud_annotation_node
devel/share/roseus/ros/rviz_cloud_annotation/: manifest.l
devel/share/rviz_cloud_annotation/cmake/: rviz_cloud_annotation-msg-paths.cmake
src/: main.cpp  point_cloud_plane_params.h  point_cloud_plane_segment.cpp  point_cloud_plane_segment.h
src/rviz_cloud_annotation/: CMakeLists.txt
src/rviz_cloud_annotation/pcl_include/: colors.cpp
src/rviz_cloud_annotation/pcl_include/pcl/common/: colors.h
src/rviz_cloud_annotation/rviz/: annotation.rviz
src/rviz_cloud_annotation/src/: point_cloud_plane_curves_extract.cpp  point_cloud_plane_curves_extract.h  point_cloud_plane_detect.cpp  point_cloud_plane_detect.h  point_cloud_plane_hf.cpp  point_cloud_plane_hf.h  point_cloud_plane_params.h  point_cloud_plane_segement.cpp  point_cloud_plane_segement.h  point_cloud_plane_segment.cpp  point_cloud_plane_segment.h  rviz_cloud_annotation.cpp  rviz_cloud_annotation_class.cpp  rviz_cloud_annotation_class.h  rviz_cloud_annotation_params.h  rviz_cloud_annotation_points.h
